# sechub

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 99b58e1fb222_initial_schema.py  a1b2c3d4e5f6_backfill_progress.py  b2c3d4e5f6a7_security_issuer_cik.py
backend/app/: __init__.py  backfill.py  cli.py  config.py  db.py  main.py  migrate.py  schemas.py  worker.py
backend/app/api/: serialize.py
backend/app/api/routers/: filers.py  filings.py  securities.py
backend/app/edgar/: __init__.py  client.py  common.py  feed.py  full_index.py  header.py  index_parse.py  indexes.py  locate.py
backend/app/edgar/parsers/: __init__.py  dto.py  form13f.py  nport.py  ownership.py  schedule13dg.py  xmlutil.py
backend/app/ingest/: __init__.py  diff.py  pipeline.py  resolve.py
backend/app/models/: __init__.py  backfill.py  core.py  fund.py  holdings.py  insider.py  stake.py
backend/migrations/: 0001_initial_schema.sql  0002_backfill_progress.sql  0003_security_issuer_cik.sql
backend/tests/: conftest.py  test_api_endpoints.py  test_api_history.py  test_backfill_index.py  test_common.py  test_diff.py  test_header.py  test_ingest.py  test_parsers.py  test_worker.py
backend/tests/fixtures/: form13f_infotable.xml  form13f_primary_doc.xml  form4.xml  nport.xml  sc13d.html
docs/: ARCHITECTURE.md  FRONTEND_REDESIGN_PROMPT.md
experiments/go-snake/: .gitignore  (+3 more)
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.setup.ts
(+13 files in other folders)
